--- a/package.json
+++ b/package.json
@@ -51,9 +51,12 @@
     "pg-hstore": "^2.3.2",
     "prop-types": "^15.5.8",
     "react": "^16.3.1",
+    "react-dnd": "^4.0.5",
+    "react-dnd-html5-backend": "^4.0.5",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.2",
     "react-router-dom": "^4.1.1",
+    "react-times": "^3.0.0",
     "redux": "^3.6.0",
     "redux-logger": "^2.8.1",
     "redux-thunk": "^2.2.0",
